[package]
name = "pgfplots"
version = "0.4.0" # Remember to also change this in the README.md
edition = "2021"
license = "MIT"
description = "A Rust library to generate publication-quality figures"
readme = "README.md"
repository = "https://github.com/DJDuque/pgfplots"
keywords = ["pgfplots", "plotting", "plot", "visualization", "latex"]
categories = ["visualization"]
documentation = "https://docs.rs/pgfplots"

[dependencies]
tectonic = { version = "0.9", optional = true }
thiserror = "1"
opener = "0.5"

[features]
inclusive = ["dep:tectonic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
